--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my simple website</title>
-  <link rel="stylesheet" href="style.cssgit">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div>
   <h3>My Simple website</h3>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At illum nostrum quas deserunt praesentium ea eius, eaque et totam possimus voluptas dolor labore sint quibusdam minus vero exercitationem quod facilis.</p>
+</div>
+
+
 </body>
 </html>
