--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my simple website</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div>
+ <header>
   <h3>My Simple website</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At illum nostrum quas deserunt praesentium ea eius, eaque et totam possimus voluptas dolor labore sint quibusdam minus vero exercitationem quod facilis.</p>
+ </header>
+  <div class="container">
+  <div>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At illum nostrum quas deserunt praesentium ea eius,<br>
+      eaque et totam possimus voluptas dolor labore sint quibusdam minus vero exercitationem quod facilis.</p>
+  </div>
+
+  <div class="icons">
+    <img src="/react icon.png" alt="">
+  </div>
 </div>
 
-
 </body>
+
 </html>
