--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
   </div>
 
   <div class="icons">
-    <img src="/react icon.png" alt="">
+    <img src="react icon.png" alt="">
+    <img src="twitter icon.png" alt="">
   </div>
+
+  
 </div>
 
 </body>
