--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <div class="icons">
     <img src="react icon.png" alt="">
     <img src="twitter icon.png" alt="">
+    <img src="in-icon.png" alt="">
+    <img src="inst-icon.png" alt="">
   </div>
 
   
