--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <img src="twitter icon.png" alt="">
     <img src="in-icon.png" alt="">
     <img src="inst-icon.png" alt="">
+    <img src="Rectangle 4.png" alt="">
+    <img src="pngwing 7.png" alt="">
   </div>
 
   
