--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <img src="inst-icon.png" alt="">
     <img src="Rectangle 4.png" alt="">
     <img src="pngwing 7.png" alt="">
+    <img src="my-pic.png" alt="">
   </div>
 
   
