added more images

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <img src="Rectangle 4.png" alt="">
     <img src="pngwing 7.png" alt="">
     <img src="my-pic.png" alt="">
+    <img src="fb-icon.png" alt="">
   </div>
 
   
