--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <img src="pngwing 7.png" alt="">
     <img src="my-pic.png" alt="">
     <img src="fb-icon.png" alt="">
+    <img src="Flower 01.png" alt="">
   </div>
 
   
